--- a/lib/lambda-layers/genai-layer/requirements.txt
+++ b/lib/lambda-layers/genai-layer/requirements.txt
@@ -1,4 +1,5 @@
 langchain==0.3.19
 aws_lambda_powertools==2.31.0
 aws_xray_sdk==2.12.1
-langchain-community
+langchain-community==0.3.18
+langchain-aws==0.2.27
