--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "aws-cdk-lib": "2.187.0",
     "cdk-nag": "2.28.149",
     "constructs": "10.3.0",
+    "pinia": "^3.0.3",
     "source-map-support": "0.5.21"
   }
 }
