--- a/lib/vue-app/package.json
+++ b/lib/vue-app/package.json
@@ -27,7 +27,8 @@
     "pkce-challenge": "4.1.0",
     "uuid": "9.0.1",
     "vue": "3.5.13",
-    "vuetify": "3.8.0"
+    "vuetify": "3.8.0",
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "@babel/types": "7.27.0",
